; ModuleID = '/home/carl/AnghaBench/git/extr_symlinks.c_threaded_has_symlink_leading_path.c'
source_filename = "/home/carl/AnghaBench/git/extr_symlinks.c_threaded_has_symlink_leading_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_def = type { i32 }

@FL_SYMLINK = common dso_local global i32 0, align 4
@FL_DIR = common dso_local global i32 0, align 4
@USE_ONLY_LSTAT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @threaded_has_symlink_leading_path(%struct.cache_def* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.cache_def*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.cache_def* %0, %struct.cache_def** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.cache_def*, %struct.cache_def** %4, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = load i32, i32* %6, align 4
  %10 = load i32, i32* @FL_SYMLINK, align 4
  %11 = load i32, i32* @FL_DIR, align 4
  %12 = or i32 %10, %11
  %13 = load i32, i32* @USE_ONLY_LSTAT, align 4
  %14 = call i32 @lstat_cache(%struct.cache_def* %7, i8* %8, i32 %9, i32 %12, i32 %13)
  %15 = load i32, i32* @FL_SYMLINK, align 4
  %16 = and i32 %14, %15
  ret i32 %16
}

declare dso_local i32 @lstat_cache(%struct.cache_def*, i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
